--- a/10-7/task1.html
+++ b/10-7/task1.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        
+        for(let i=1 ; i<=1000; i++){
+        if(i% 13  == 0 )
+        console.log(i);
+    }
+    </script>
 </body>
 </html>
